[package]
name = "radio"
description = "Generic traits for embedded packet radio devices"
repository = "https://github.com/ryankurte/rust-radio"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT"
edition = "2018"
version = "0.7.0"

[package.metadata.docs.rs]
all-features = true

[features]
async-await = [ ]
mock = [ "embedded-hal-mock" ]
std = []
helpers = [ "structopt", "humantime", "std", "pcap-file", "libc", "byteorder" ]
all = [ "async-await", "async-std", "mock", "helpers" ]
default = []

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
log = "0.4.8"

humantime = { version = "2.0.1", optional = true }
pcap-file = { version = "1.1.1", optional = true }
structopt = { version = "0.3.14", optional = true }
async-std = { version = "1.4.0", optional = true }
libc = { version = "0.2.71", optional = true }
byteorder = { version = "1.3.4", optional = true }


[dependencies.chrono]
version = "*"
default_features = false

[dependencies.embedded-hal-mock]
version = "0.7.1"
optional = true

