[package]
name = "radio"
description = "Generic traits for embedded packet radio devices"
repository = "https://github.com/rust-iot/radio-hal"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT"
edition = "2018"
version = "0.10.0"

[package.metadata.docs.rs]
all-features = true

[features]
std = [ "log" ]
nonblocking = [ ]
mock = [ "embedded-hal-mock" ]
helpers = [ "structopt", "humantime", "std", "pcap-file", "libc", "byteorder", "rolling-stats" ]
default = []

[dependencies]
embedded-hal = "=1.0.0-alpha.6"
nb = "1.0.0"

log = { version = "0.4.14", optional = true, default_features = false }
defmt = { version = "0.3.0", optional = true }

humantime = { version = "2.0.1", optional = true }
pcap-file = { version = "1.1.1", optional = true }
structopt = { version = "0.3.14", optional = true }
async-std = { version = "1.4.0", optional = true }
libc = { version = "0.2.71", optional = true }
byteorder = { version = "1.3.4", optional = true }
rolling-stats = { version = "0.5.0", optional = true }
thiserror = { version = "1.0.30", optional = true }

[dependencies.chrono]
version = "0.4.19"
default_features = false

[dependencies.embedded-hal-mock]
version = "0.8.0"
optional = true

[dev-dependencies]
anyhow = "1.0.44"
