[package]
name = "radio"
description = "Generic traits for embedded packet radio devices"
repository = "https://github.com/rust-iot/radio-hal"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT"
edition = "2018"
version = "0.11.1"

[package.metadata.docs.rs]
features = [ "std", "nonblocking", "mock", "helpers" ]

[features]
std = [ ]
nonblocking = [ ]
mock = [ "embedded-hal-mock" ]
helpers = [ "clap", "humantime", "std", "pcap-file", "libc", "byteorder", "rolling-stats" ]
default = [ ]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-mock = { version = "0.10.0", optional = true }
nb = "1.0.0"

log = { version = "0.4.14", default_features = false }
defmt = { version = "0.3.0", optional = true }

chrono = { version = "0.4.19", default_features = false }
humantime = { version = "2.0.1", optional = true }
pcap-file = { version = "1.1.1", optional = true }
async-std = { version = "1.4.0", optional = true }
libc = { version = "0.2.71", optional = true }
byteorder = { version = "1.3.4", optional = true }
rolling-stats = { version = "0.7.0", optional = true }
thiserror = { version = "1.0.30", optional = true }
clap = { version = "4.4.7", optional = true, features = [ "derive" ] }

[dev-dependencies]
anyhow = "1.0.44"
